# bailu-blog

./: START-DEV.md  editor-migration-plan.md
backend/: pyproject.toml
backend/blogapp/: main.py
backend/blogapp/core/: config.py  logging.py
backend/blogapp/core/database/: mongodb.py
backend/blogapp/core/security/: models.py  routes.py  utilities.py
backend/blogapp/modules/articles/: models.py  routes.py
backend/blogapp/modules/comments/: models.py  routes.py
backend/blogapp/modules/gpt_writer/: chatgpt_settings.yml  models.py  routes.py  writer.py
backend/blogapp/modules/users/: models.py  routes.py
backend/blogapp/utils/: avatar.py  create_users.py  extended_document.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  quasar-variables.sass
frontend/src/client/: index.ts
frontend/src/client/models/: ArticleCreateOrUpdate.ts  ArticleDocument.ts  ArticleDocumentResponse.ts  ArticleGenerate.ts  ArticleResponse.ts  ArticlesResponse.ts  ArticlesSortField.ts  Body_change_user_role_users__user_id__role_put.ts  CommentCreate.ts  ReplyCreate.ts  (+16 more)
frontend/src/components/: ArticleCard.vue  ArticleEditor.vue  ArticleList.vue  AuthLoginForm.vue  AuthRegisterForm.vue  CommentList.vue  GptWriterForm.vue  HeaderMenu.vue  UserCard.vue  UserInfoCard.vue  UserList.vue
frontend/src/services/: AuthService.ts
frontend/src/views/: ArticleCardView.vue  ArticleEditorView.vue  ArticleListView.vue  AuthLoginView.vue  AuthLogoutView.vue  AuthRegisterView.vue  GptWriterView.vue  PathNotFoundView.vue  UserListView.vue  UserView.vue
(+1 files in other folders)
